Continue implement browse files features